--- a/templates/collab websites/highlander.html
+++ b/templates/collab websites/highlander.html
@@ -11,17 +11,17 @@
     <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/KaJjkarMH6c?si=5TBXyoeuciBl_YaP"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="max-width: 100vw;"></iframe>
     <div class="bio-text" style="text-align:left;">
         <h2 style="text-align:left;">MATCHA</h2>
-        <p>“Yasssssss, I’m finally back bro. Ohh look at that booty, didn’t expect it to be so big, my hair slays too.
+        <p>“Yasssssss, I’m finally back bro. Ohh look at that booty, didn't expect it to be so big, my hair slays too.
             Wow, never happy to be a girl like now!”
         </p>
         <p>
             An intimate friendship between two kindred spirits of Mike and Colleen was suddenly ruined, boiling down to
             an uneventful dispute about a rather petty subject. Full of hatred, Colleen herself made up a fiction with
             devastating occurrences to Mike. As a supernatural incident happened, Colleen had a chance to find her
-            deepest sympathies with the incessant ups and downs in Mike’s life, changing her very perception of him and
+            deepest sympathies with the incessant ups and downs in Mike's life, changing her very perception of him and
             propelling her to make up with him. Yet even after becoming reconciled, they encountered arbitrary and
             tragic occurrences that make their own existence at stake…</p>
     </div>
