--- a/templates/collab websites/recit.html
+++ b/templates/collab websites/recit.html
@@ -14,7 +14,7 @@
 <div class="bio-container">
     
     <!-- Embedded film on the left -->
-    <div class="bio-text" style="text-align:left;">
+    <div class="bio-text" style="text-align:left; max-width: 100vw;">
         <h2>RECÍT STUDIO</h2>
         <p>Recít Studio is a student-run film production studio based in Hanoi, Vietnam. Founded in 2023 by a group of
             creatively inspired high school students, Recít aims to create meaningful and impactful motion pictures that center
@@ -23,7 +23,7 @@
             promotional videos and event coverage.
         </p>
     </div>
-    <img height="300px" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner">
+    <img height="300px" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner" style = "max-width: 100vw;">
 </div>
 <!--         
         <p>
