--- a/static/css/body.css
+++ b/static/css/body.css
@@ -100,7 +100,7 @@
 .image-container {
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 70vh;
     /* Set height for random positioning */
     overflow: hidden;
     z-index: 1;
@@ -134,16 +134,6 @@
 .image:nth-child(4) { top: 300px; left: 50px; }
 .image:nth-child(5) { top: 400px; left: 100px; }
 .image:nth-child(6) { top: 200px; left: 350px; } */
-
-@media (max-width: 900px) {
-    .bio-image { margin: auto;}
-    /* .image:nth-child(1) {top: 5vw; left: 15vw;}
-    .image:nth-child(2) {top: 50vw; left: 30vw;}
-    .image:nth-child(3) {top: 10vw; left: 5vw;}
-    .image:nth-child(4) {top: 30vw; left: 50vw;}
-    .image:nth-child(5) {top: 65vw; left: 40vw;}
-    .image:nth-child(6) {top: 25vw; left: 10vw;} */
-}
 
 /* Full-size pop-up styling */
 .popup-image {
