--- a/templates/collab websites/recit.html
+++ b/templates/collab websites/recit.html
@@ -23,7 +23,7 @@
             promotional videos and event coverage.
         </p>
     </div>
-    <img height="300px" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner" style = "max-width: 100vw;">
+    <img height="100%" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner" style = "max-width: 100vw; height: auto;">
 </div>
 <!--         
         <p>
@@ -40,7 +40,7 @@
 
 <div class="bio-container">
 
-    <div class="fb-video" data-href="https://www.facebook.com/reel/1439886723469884" data-width="700" data-show-text="false" style="float: right; margin-left: 10vw;"></div>
+    <div class="fb-video" data-href="https://www.facebook.com/reel/1439886723469884" data-width="700" data-show-text="false" style="float: right; margin-left: 10vw; max-width: 100vw;"></div>
     <div class="bio-text" style="text-align:left;">
         <h2>WITHIN THE UNSEEN DREAM.</h2>
         <h2>GIỮA CƠN MƠ VÔ HÌNH</h2>
