--- a/static/css/body.css
+++ b/static/css/body.css
@@ -395,3 +395,16 @@
     }
 
 }
+
+.fb-video {
+    float:right;
+    margin-left: 10vw;
+    max-width: 100vw;
+}
+
+@media screen and (max-width: 600px) {
+    .fb-video {
+        margin: auto;
+        float: none;
+    }
+}
