--- a/templates/collab websites/recit.html
+++ b/templates/collab websites/recit.html
@@ -23,7 +23,7 @@
             promotional videos and event coverage.
         </p>
     </div>
-    <img height="100%" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner" style = "max-width: 100vw; height: auto;">
+    <img height="100%" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner" style = "max-width: 100vw; height: 35vh;">
 </div>
 <!--         
         <p>
