--- a/static/css/body.css
+++ b/static/css/body.css
@@ -397,9 +397,15 @@
 }
 
 .fb-video {
-    float:right;
-    margin-left: 10vw;
+    float: right;
     max-width: 80vw;
+    height: auto;
+}
+
+.video-container {
+    margin-left: 10vw;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 .recit-image {
@@ -408,6 +414,11 @@
 }
 
 @media screen and (max-width: 600px) {
+    .video-container {
+        margin-left: 0;
+        max-width: 100vw;
+    }
+
     .fb-video {
         margin: auto;
         float: none;
