--- a/static/css/body.css
+++ b/static/css/body.css
@@ -400,12 +400,7 @@
     float: right;
     max-width: 80vw;
     height: auto;
-}
-
-.video-container {
     margin-left: 10vw;
-    max-width: 100vw;
-    overflow: hidden;
 }
 
 .recit-image {
@@ -414,15 +409,11 @@
 }
 
 @media screen and (max-width: 600px) {
-    .video-container {
-        margin-left: 0;
-        max-width: 100vw;
-    }
-
     .fb-video {
-        margin: auto;
         float: none;
         max-width: 480px;
+        margin-left: 0;
+        transform: scale(0.8);
     }
 
     .recit-image {
