--- a/templates/collab websites/recit.html
+++ b/templates/collab websites/recit.html
@@ -40,9 +40,7 @@
 
 <div class="bio-container">
 
-    <div class="video-container">
-        <div class="fb-video" data-href="https://www.facebook.com/reel/1439886723469884" data-width="auto" data-show-text="false"></div>
-    </div>
+    <div class="fb-video" data-href="https://www.facebook.com/reel/1439886723469884" data-width="700" data-show-text="false"></div>
     <div class="bio-text" style="text-align:left;">
         <h2>WITHIN THE UNSEEN DREAM.</h2>
         <h2>GIỮA CƠN MƠ VÔ HÌNH</h2>
