--- a/static/css/body.css
+++ b/static/css/body.css
@@ -398,9 +398,7 @@
 
 .fb-video {
     float: right;
-    max-width: 80vw;
     height: auto;
-    margin-left: 10vw;
 }
 
 .recit-image {
@@ -411,7 +409,7 @@
 @media screen and (max-width: 600px) {
     .fb-video {
         float: none;
-        max-width: 480px;
+        width: 80vw;
         margin-left: 0;
         transform: scale(0.8);
     }
