--- a/templates/collab websites/highlander.html
+++ b/templates/collab websites/highlander.html
@@ -8,13 +8,13 @@
 {% block content %}
 <!--- Subnavigation page for displaying project --->
 <div class="bio-container">
-    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/KaJjkarMH6c?si=5TBXyoeuciBl_YaP"
+    <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/KaJjkarMH6c?si=5TBXyoeuciBl_YaP"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="max-width: 100vw;"></iframe>
     <div class="bio-text" style="text-align:left;">
         <h2 style="text-align:left;">MATCHA</h2>
-        <p>“Yasssssss, I’m finally back bro. Ohh look at that booty, didn't expect it to be so big, my hair slays too.
+        <p>“Yasssssss, I'm finally back bro. Ohh look at that booty, didn't expect it to be so big, my hair slays too.
             Wow, never happy to be a girl like now!”
         </p>
         <p>
@@ -31,10 +31,10 @@
 <div class="bio-container">
     <div></div>
     <image class="bio-image" style="filter:grayscale(0)" src="../static/asset/images/art direction/poster.jpg"></image>
-    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/cqjCkyhlPkM?si=Y71W9A6Z8yVQtYVL"
+    <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/cqjCkyhlPkM?si=Y71W9A6Z8yVQtYVL"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="max-width: 100vw;"></iframe>
 
 </div>
 
