--- a/templates/personal websites/afvs.html
+++ b/templates/personal websites/afvs.html
@@ -150,4 +150,7 @@
 
 <!--- Spacer to maintain page length --->
 <div class="spacer" style="padding-bottom: 0rem;"> </div>
+
+<img class="bio-image" src="../static/asset/images/processing/output.gif" alt="gif">
+
 {% endblock %}
