--- a/templates/about.html
+++ b/templates/about.html
@@ -99,6 +99,8 @@
         <div class="image" style="background-image: url('../static/asset/images/self/sis.jpg');"></div>
         <div class="image" style="background-image: url('../static/asset/images/self/story.jpg');"></div>
         <div class="image" style="background-image: url('../static/asset/images/self/wow.jpg');"></div>
+        <div class="image" style="background-image: url('../static/asset/images/self/ava.jpg');"></div>
+        <div class="image" style="background-image: url('../static/asset/images/self/non.jpg');"></div>
     </div>
 
 
