--- a/templates/personal.html
+++ b/templates/personal.html
@@ -167,7 +167,7 @@
           <div class="card__desc">Self-expression through code — press a key to see the face react</div>
           <div class="card__meta">Ongoing</div>
         </a>
-        <a class="card" href="gif">
+        <a class="card" href="gifafvs">
           <div class="card__title">What Brings You Here</div>
           <div class="card__desc">Do you wish someone would tell you what to do?</div>
           <div class="card__meta">Oct 2024</div>
