--- a/templates/personal websites/gifafvs.html
+++ b/templates/personal websites/gifafvs.html
@@ -9,9 +9,9 @@
 <!--- Subnavigation page for displaying project --->
 <div class="bio-container">
     
-    <img class="image" src="../static/asset/images/processing/output.gif" alt="gif">
+    <img class="gif-image" src="../static/asset/images/processing/output.gif" alt="gif">
 
-    <div class="bio-text" style="text-align:left; max-width: 100vw;">
+    <div class="bio-text" style="text-align:left; max-width: 100vw; padding-left: 5vw; padding-right: 5vw;">
         <h2>What Brings You Here</h2>
         <p>This piece was my first ever homework submission at Harvard. It was created using Processing, 
             a Java-based programming language that accommodates interactive visual arts. I wanted to create
@@ -24,7 +24,8 @@
             when different inputs are entered.
         </p>
     </div>
-    <img class="image" src="../static/asset/images/processing/output.gif" alt="gif" style="filter:greyscale(100%)">
+    <div></div>
+    <img class="gif-image" src="../static/asset/images/processing/output.gif" alt="gif" style="filter:greyscale(100%)">
 </div>
 
 
