--- a/templates/personal websites/gifafvs.html
+++ b/templates/personal websites/gifafvs.html
@@ -25,7 +25,7 @@
         </p>
     </div>
     <div></div>
-    <img class="gif-image" src="../static/asset/images/processing/output.gif" alt="gif" style="filter:greyscale(100%)">
+    <img class="gif-image" src="../static/asset/images/processing/output.gif" alt="gif" style="filter:grayscale(100%)">
 </div>
 
 
