--- a/templates/personal.html
+++ b/templates/personal.html
@@ -148,7 +148,7 @@
         </a>
         <a class="card" href="illustration">
           <div class="card__title">Illustrations</div>
-          <div class="card__desc">My journey in the world of anime and cartoons (2018-2024)</div>
+          <div class="card__desc">My journey in the world of drawing cartoons (2018-2024)</div>
           <div class="card__meta">Delayed after 2022</div>
         </a>
         <a class="card" href="superface">
