--- a/templates/personal websites/gifafvs.html
+++ b/templates/personal websites/gifafvs.html
@@ -16,11 +16,11 @@
         <p>This piece was my first ever homework submission at Harvard. It was created using Processing, 
             a Java-based programming language that accommodates interactive visual arts. I wanted to create
             an input-based program that suggests different activities for other first-year college students, 
-            given the plethora of options available like the colors of candies in a jar. There is a sense 
+            given the plethora of options available, just like the colors of candies in a jar. There is a sense 
             of randomness and surprise, which might seem contradictory to the meticulous planning that most 
-            of us do when thinking about our future.
+            students do when thinking about their future.
 
-            This project is supposed to be interactive, but I have only included a gif of what it looks like
+            This project is supposed to be interactive. Here, I have included a gif of what it looks like
             when different inputs are entered.
         </p>
     </div>
