--- a/templates/about.html
+++ b/templates/about.html
@@ -75,7 +75,7 @@
     <img class="bio-image" src="../static/asset/images/other/Headshot_Chi Le.jpg" alt="biopic">
     <div class="bio-text">
         <h2>My name is Lê Tuệ Chi or Chi Le.</h2>
-        <h2>I am a self-taught illustrator and graphic designer based in Cambridge, MA.</h2>
+        <h2>I am a self-taught illustrator and graphic designer, training to become a programmer, based in Cambridge, MA.</h2>
         <p></p>
         <p>
             My passion for film and installation art grows within my identity: <em>pirenily</em>. I use pirenily as a
