--- a/templates/personal websites/afvs.html
+++ b/templates/personal websites/afvs.html
@@ -27,7 +27,7 @@
 <!--- Subnavigation page for displaying project --->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
 
-<div id="sketch-container" style="display: flex; justify-content: center; margin: auto; align-items: center;"></div>
+<div id="sketch-container" style="display: flex; justify-content: center; margin: auto; align-items: center; padding-top: 2.5vh;"></div>
 <!-- Import the script from Processing -->
 <script>
     let f;
