--- a/templates/personal websites/gifafvs.html
+++ b/templates/personal websites/gifafvs.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
-<div class="bio-container">
+<div class="bio-container" style="padding-top: 5vh;">
     
     <img class="gif-image" src="../static/asset/images/processing/output.gif" alt="gif">
 
