--- a/templates/about.html
+++ b/templates/about.html
@@ -75,14 +75,15 @@
     <img class="bio-image" src="../static/asset/images/other/Headshot_Chi Le.jpg" alt="biopic">
     <div class="bio-text">
         <h2>My name is Lê Tuệ Chi or Chi Le.</h2>
-        <h2>I am a self-taught illustrator and graphic designer, training to become a programmer, based in Cambridge, MA.</h2>
+        <h2>I am a self-taught illustrator and designer, training to become a programmer, based in Cambridge, MA.</h2>
         <p></p>
         <p>
             My passion for film and installation art grows within my identity: <em>pirenily</em>. I use pirenily as a
             vessel of self-expression: through graphic design, photography, and storyboards. My main interests lie in
             the construction of interdependence: of time depiction through visual effects, of the existence of the
-            multiverse through doors-and-paths-related design, and of myself as a locus of socialization. Every form of
-            visual presentation on this website is mainly experimented, taken, edited, scripted, and modeled by me.
+            multiverse through doors-and-paths-related design, and of myself as a locus of socialization. This also
+            affects how I perceive selfhood and technology, and the human-computer interactions that shape modern life. 
+            Every form of visual presentation on this website is mainly experimented, taken, edited, scripted, and modeled by me.
         </p>
         <p>
             I am currently a sophomore at Harvard College, concentrating in <a href="https://seas.harvard.edu/computer-science">Computer Science</a>
