try to see preview

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,9 +57,23 @@
 
     <!-- Landing footer stays visible on first screen -->
     <footer class="home-footer">
-        <div class="home-footer-meta">Chi (Tue) Le | Pirenily | Updated 2025</div>
+        <div class="home-footer-meta">Chi (Tue) Le | Pirenily | Updated Jan 2026</div>
         <div class="home-footer-hint">Scroll down to see my portfolio</div>
     </footer>
+
+    <main class="below-fold">
+        <a class="project-thumb" href="home" >
+            <!-- swap src to any thumbnail you want -->
+            <img class="project-thumb-img"
+                 src="/static/asset/images/ux/cs171/preview.gif"
+                 alt="Visualization: A Unicode Story">
+
+            <div class="project-thumb-meta">
+                <div class="project-thumb-title">Chi x Rain: An Essay on Unicode</div>
+                <div class="project-thumb-sub">Final Project for CS1710: Visualization</div>
+            </div>
+        </a>
+    </main>
 
     <!-- BELOW THE FOLD: thumbnail appears only when you scroll down -->
     <main class="below-fold">
