--- a/templates/index.html
+++ b/templates/index.html
@@ -61,20 +61,6 @@
         <div class="home-footer-hint">Scroll down to see my portfolio</div>
     </footer>
 
-    <main class="below-fold">
-        <a class="project-thumb" href="home" >
-            <!-- swap src to any thumbnail you want -->
-            <img class="project-thumb-img"
-                 src="/static/asset/images/ux/cs171/preview.gif"
-                 alt="Visualization: A Unicode Story">
-
-            <div class="project-thumb-meta">
-                <div class="project-thumb-title">Chi x Rain: An Essay on Unicode</div>
-                <div class="project-thumb-sub">Final Project for CS1710: Visualization</div>
-            </div>
-        </a>
-    </main>
-
     <!-- BELOW THE FOLD: thumbnail appears only when you scroll down -->
     <main class="below-fold">
         <a class="project-thumb" href="/t4sg" aria-label="Open T4SG × 2ft (Password)">
@@ -89,6 +75,22 @@
             </div>
         </a>
     </main>
+
+
+    <main class="below-fold">
+        <a class="project-thumb" href="/cs1710" >
+            <!-- swap src to any thumbnail you want -->
+            <img class="project-thumb-img"
+                 src="/static/asset/images/ux/cs171/preview.gif"
+                 alt="Visualization: A Unicode Story">
+
+            <div class="project-thumb-meta">
+                <div class="project-thumb-title">Chi x Rain: An Essay on Unicode</div>
+                <div class="project-thumb-sub">Final Project for CS1710: Visualization</div>
+            </div>
+        </a>
+    </main>
+
 </body>
 
 </html>
