Add all CS171 media

--- a/templates/t4sg.html
+++ b/templates/t4sg.html
@@ -23,7 +23,7 @@
         </p>
 
         <div class="tag-row">
-            <div class="tag">Role: UX Design</div>
+            <div class="tag">Role: UX Designer</div>
             <div class="tag">My scope: Add / Edit / View Component </div>
             <div class="tag">Research: President + Treasurer + 3 Volunteers</div>
             <div class="tag">Constraint: Build from Scratch + Unreliable internet</div>
